--- a/03 - CSS Variables/index-FINISHED.html
+++ b/03 - CSS Variables/index-FINISHED.html
@@ -19,7 +19,7 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="https://w0.peakpx.com/wallpaper/336/539/HD-wallpaper-clair-obscur-expedition-33-video-game-2025-u-games-video-game-gaming-2025-clair-obscur-expedition-33.jpg">
 
   <style>
     :root {
