--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -13,16 +13,31 @@
     <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+    <input id="blur" type="range" name="blur" min="0" max="25" value="5" data-sizing="px">
 
     <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    <input id="base" type="color" name="base" value="#d4130c">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="https://w0.peakpx.com/wallpaper/336/539/HD-wallpaper-clair-obscur-expedition-33-video-game-2025-u-games-video-game-gaming-2025-clair-obscur-expedition-33.jpg">
 
   <style>
 
+    :root{
+      --base: #d4130c;
+      --blur: 5px;
+      --spacing:10px;
+    }
+
+    .hl{
+      color: var(--base);
+    }
+
+    img{
+      background:var(--base);
+      filter: blur(var(--blur));
+      padding:var(--spacing);
+    }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -46,6 +61,18 @@
   </style>
 
   <script>
+    const controls = document.querySelectorAll('.controls input');
+
+    function handleUpdate() {
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix);
+    }
+
+    controls.forEach(control=>control.addEventListener("change", handleUpdate));
+    controls.forEach(control=>control.addEventListener("mousemove", handleUpdate));
+
+    // controls.forEach(control => handleUpdate.call(control));
+
   </script>
 
 </body>
